resources/ingress-nginx/multiple-ingress-controllers/private-ingress/ingress-resources/ingress-with-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress-tls
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: "letsencrypt-cluster"
spec:
  ingressClassName: private-ingress
  tls:
    - hosts:
        - app-tls.sandbox.launch.dresdencraft.com
      secretName: hello-world-ingress-tls
  rules:
  - host: app-tls.sandbox.launch.dresdencraft.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: aks-helloworld-two
              port:
                number: 80
