resources/ingress-nginx/multiple-ingress-controllers/private-ingress/ingress-resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: private-ingress
  rules:
  - host: app2.sandbox.launch.dresdencraft.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: aks-helloworld-two
              port:
                number: 80
